Fixed mobile visible bug

--- a/src/components/ThemeSwitch.css
+++ b/src/components/ThemeSwitch.css
@@ -4,6 +4,7 @@
   position: relative;
   width: 60px;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .switch input {
